--- a/static/index.html
+++ b/static/index.html
@@ -129,7 +129,7 @@
           }
         }
         var sprite = new PIXI.Sprite(this.textures.green);
-        sprite.id = (this.ids++)-1;
+        sprite.internalId = (this.ids++)-1;
         sprite.free = false;
         this.sprites.push(sprite);
         console.log("new bullet sprite");
@@ -148,7 +148,7 @@
 
     function ShipRenderer(ships){
       this.bulletpool = new  BulletPool();
-      this.ships = ships;
+      this.shipsOnStage = ships;
 
       // create ship texture
       this.render = function(shipupdate,coordenate,radarCoordenate,stage,mousepoint){
@@ -167,45 +167,55 @@
         var sprite = null;
         var radarpoint = null;
 
-        if(this.ships[shipupdate.id]){
-          sprite = this.ships[shipupdate.id].sprite;
-          radarpoint = this.ships[shipupdate.id].radarpoint;
+        if(this.shipsOnStage[shipupdate.id]){
+          sprite = this.shipsOnStage[shipupdate.id].sprite;
+          radarpoint = this.shipsOnStage[shipupdate.id].radarpoint;
         }else{
-          this.ships[shipupdate.id] = {};
-          sprite = this.ships[shipupdate.id].sprite = shipHandler.createSprite(coordenate);
-          radarpoint = this.ships[shipupdate.id].radarpoint = shipHandler.createRadarPoint();
+          this.shipsOnStage[shipupdate.id] = {};
+          sprite = this.shipsOnStage[shipupdate.id].sprite = shipHandler.createSprite(coordenate);
+          radarpoint = this.shipsOnStage[shipupdate.id].radarpoint = shipHandler.createRadarPoint();
           stage.addChild(sprite);
         }
 
         shipHandler.setPositionInRadar(radarpoint,shipupdate,radarCoordenate);
         shipHandler.setPositionInStage(sprite,shipupdate,coordenate,mousepoint);
 
-        if(!this.ships[shipupdate.id].bullets){
-          this.ships[shipupdate.id].bullets = {};
+        if(!this.shipsOnStage[shipupdate.id].bullets){
+          this.shipsOnStage[shipupdate.id].bullets = {};
         }
 
-        var bullets = this.ships[shipupdate.id].bullets
-
+        var bulletsOnStage = this.shipsOnStage[shipupdate.id].bullets
+        var bulletOnGame = {}
         for (var i in shipupdate.bullets) {
-          
 
           var sprite = null;
-          if(!bullets[shipupdate.bullets[i].id]){
+          var bulletId = shipupdate.bullets[i].id;
+          bulletOnGame[bulletId] = true;
+
+          if(!bulletsOnStage[bulletId]){
             sprite = this.bulletpool.getSprite();
-            console.log(sprite)
-            stage.addChild(sprite);
-            bullets[shipupdate.bullets[i].id] = sprite;
+            sprite.id = bulletId;
             sprite.width = 0.4 * coordenate.scale;
+            bulletsOnStage[bulletId] = sprite;
+            //TODO angle
+            //sprite.angle = shipupdate.bullets[i].angle
+            stage.addChild(sprite);
           }else{
-            sprite = bullets[shipupdate.bullets[i].id];
+            sprite = bulletsOnStage[bulletId];
           }
-          shipupdate.bullets[i].x = Number(shipupdate.bullets[i].x);
-          shipupdate.bullets[i].y = Number(shipupdate.bullets[i].y);
-          sprite.x = coordenate.X(shipupdate.bullets[i].x);
-          sprite.y = coordenate.Y(shipupdate.bullets[i].y);
-          //sprite.angle = shipupdate.bullets[i].angle
+          sprite.x = coordenate.X(Number(shipupdate.bullets[i].x));
+          sprite.y = coordenate.Y(Number(shipupdate.bullets[i].y));
         }
 
+        for (var i in bulletsOnStage) {
+          if(!bulletOnGame[bulletsOnStage[i].id]){
+            console.log("removing bullet sprite")
+            console.log(bulletsOnStage[i]);
+            stage.removeChild(bulletsOnStage[i]);
+            this.bulletpool.releaseSprite(bulletsOnStage[i]);
+            delete bulletsOnStage[i];
+          }
+        }
       }
 
       var Basicship = function(){}
@@ -362,11 +372,11 @@
           //erase ships
           for(var id in this.ships){
             if(!shipsInGameState[Number(id)]){
-              console.log("deleting id = " + id);
-              console.log(this.ships[id])
+              //console.log("deleting id = " + id);
+              //console.log(this.ships[id])
               this.stage.removeChild(this.ships[id].sprite)
               this.ships[id].sprite = null;
-              console.log(this.ships[id])
+              //console.log(this.ships[id])
               document.getElementById('radar').removeChild(this.ships[id].radarpoint);
               delete this.ships[id];
             }
