--- a/static/index.html
+++ b/static/index.html
@@ -253,48 +253,43 @@
     
     BulletRender.prototype.createEntity = function(bullet,coordenate){
         var entity = {}
-        var container = new PIXI.DisplayObjectContainer();
+        var container = new PIXI.Container();
         entity.emitter = new cloudkid.Emitter(
           container,
           this.textures.particle,
           {
             "alpha": {
-              "start": 1,
+              "start": 0.62,
               "end": 0
             },
             "scale": {
-              "start": 0.5,
-              "end": 0.01,
-              "minimumScaleMultiplier": 1
+              "start": 0.25,
+              "end": 0.75
             },
             "color": {
               "start": "#7ed995",
               "end": "#6bba2f"
             },
             "speed": {
-              "start": 56,
-              "end": 50
-            },
-            "acceleration": {
-              "x": 0,
-              "y": 0
+              "start": 500,
+              "end": 500
             },
             "startRotation": {
-              "min": 0,
-              "max": 360
+            "min": 89,
+            "max": 91
             },
             "rotationSpeed": {
-              "min": 0,
-              "max": 0
+              "min": 50,
+              "max": 50
             },
             "lifetime": {
-              "min": 0.2,
-              "max": 0.8
+              "min": 0.1,
+              "max": 0.1
             },
             "blendMode": "normal",
-            "frequency": 0.011,
+            "frequency": 0.02,
             "emitterLifetime": -1,
-            "maxParticles": 500,
+            "maxParticles": 100,
             "pos": {
               "x": 0,
               "y": 0
@@ -309,13 +304,13 @@
           }
         );
         entity.emitter.emit = true;
-        entity.emitter.particleConstructor = cloudkid.AnimatedParticle;
+        //entity.emitter.particleConstructor = cloudkid.AnimatedParticle;
 
-        ///*var sprite = new PIXI.Sprite(this.textures.green)
-        /*sprite.width = 0.4 * coordenate.scale;
-        sprite.anchor.x = 0.0;
-        sprite.anchor.y = 1.0;
-        entity.sprite = sprite*/
+        //var sprite = new PIXI.Sprite(this.textures.green)
+        //sprite.width = 0.4 * coordenate.scale;
+        //sprite.anchor.x = 0.0;
+        //sprite.anchor.y = 1.0;
+        //entity.sprite = sprite
         entity.sprite = container;
 
         entity.lastupdate = Date.now();
