--- a/static/index.html
+++ b/static/index.html
@@ -143,7 +143,7 @@
 
     function buildmessage(data){
       //CIRCLE, POLYGON, DEAD, BULLET, GARBAGE
-      var type_len = [9,9,9,5,4]
+      var type_len = [9,9,9,5,5]
       var type_names = ['circle','polygon','dead','bullet','garbage']
       var attrs = ['type','id','x','y','angle','energy','isbot','isdamaged','name']
 
@@ -330,7 +330,7 @@
         var sprite = new PIXI.Sprite(this.texture) ;      
         sprite.anchor.x = 0.5;
         sprite.anchor.y = 0.5;
-        sprite.width = sprite.height = 20 * coordenate.scale;
+        sprite.width = sprite.height = garbage.angle * 2 * coordenate.scale;
 
         entity.sprite = sprite;
         this.stage.addChild(entity.sprite);
