ajuste energy ball

--- a/static/index.html
+++ b/static/index.html
@@ -330,7 +330,7 @@
         var sprite = new PIXI.Sprite(this.texture) ;      
         sprite.anchor.x = 0.5;
         sprite.anchor.y = 0.5;
-        sprite.width = sprite.height = garbage.angle * 2 * coordenate.scale;
+        sprite.width = sprite.height = garbage.angle * 3 *  2 * coordenate.scale;
 
         entity.sprite = sprite;
         this.stage.addChild(entity.sprite);
