chase bullet ok

--- a/static/index.html
+++ b/static/index.html
@@ -31,8 +31,24 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-  <ul id="rank" class="rank"></ul>
+  <div id="rankheader">
+    Leaderboard  
+  <ul  class="rank"></ul>
+</div>
   <div id="radar" class="radar"></div>
+  <div id="suns" class="sun"></div>
+
+  <div id="suns" class="suns"></div>
+
+<!--script src="static/js/fpsmeter.min.js"></script>
+<script src=" static/js/keydrown.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
+<script src="bower_components/pixi.js/bin/pixi.min.js"></script>
+<script src="bower_components/pixi-particles/dist/pixi-particles.min.js"></script>
+<script src="node_modules/lz-string/libs/lz-string.js"></script>
+<script src="static/js/core.js"></script-->
+
   <script src="js/script.min.js"></script>
   <script>
    $('#myModal').modal({
