star ranking by group almost done

--- a/static/index.html
+++ b/static/index.html
@@ -31,14 +31,17 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-  <div id="rankheader">
+  <div id="rank">
     Leaderboard  
-  <ul  class="rank"></ul>
-</div>
+    <ul></ul>
+  </div>
   <div id="radar" class="radar"></div>
-  <div id="suns" class="sun"></div>
-
-  <div id="suns" class="suns"></div>
+    <div id="grouprank" class="grouprank">
+      <div id="red" class="bar"><div class="bar-inside red"></div><div class="number">0 stars</div></div>
+      <div id="green" class="bar"><div class="bar-inside green"></div><div class="number">0 stars</div></div>
+      <div id="blue" class="bar"><div class="bar-inside blue"></div><div class="number">0 stars</div></div>
+      <div id="yellow" class="bar"><div class="bar-inside yellow"></div><div class="number">0 stars</div></div>
+  </div>
 
 <!--script src="static/js/fpsmeter.min.js"></script>
 <script src=" static/js/keydrown.min.js"></script>
